Adding indicator
